data/derived/fa15/progs/unify/prog1185.ml.out
Characters 114-142:
  |(a,h::t) -> if(fst x + snd x + a) > 9 then (1,a::((fst x + snd x + a) mod 10)@t) 
                                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         int list
